--- a/data/booking/history.txt
+++ b/data/booking/history.txt
@@ -3,3 +3,4 @@
 1,wengtim,raul,Tuesday,2024-12-03,07:00,09:00,Accepted
 1,wengtim,raul,Tuesday,2024-12-03,07:00,09:00,Accepted
 1,wengtim,raul,Tuesday,2024-12-03,07:00,09:00,Accepted
+1,wengtim,raul,Tuesday,2024-12-03,07:00,09:00,Accepted
