--- a/data/booking/history.txt
+++ b/data/booking/history.txt
@@ -6,3 +6,9 @@
 1,wengtim,raul,Tuesday,2024-12-03,07:00,09:00,Accepted
 2,wengtim,raul,Wednesday,2024-12-11,01:30,03:00,Rejected
 1,wengtim,raul,Tuesday,2024-12-03,07:00,09:00,Accepted
+2,wengtim,raul,Wednesday,2024-12-11,15:30,17:40,Rejected
+2,wengtim,raul,Wednesday,2024-12-11,01:30,03:00,Accepted
+1,wengtim,raul,Tuesday,2024-12-03,07:00,09:00,Accepted
+2,wengtim,raul,Wednesday,2024-12-11,01:30,03:00,Accepted
+2,wengtim,raul,Wednesday,2024-12-11,01:30,03:00,Accepted
+1,wengtim,raul,20 December 2024,2:30pm,4:30pm,Rescheduled
